-webkit overlay 'transform/position:fixed/overflow' issue fix

--- a/style/avgrund.css
+++ b/style/avgrund.css
@@ -1,10 +1,10 @@
 html, body {
 	height: 100%;
-	overflow: auto; /* TIP: set it to 'auto' if you have long content pages, in other cases 'hidden' will be enough */
+	overflow: auto; /* TIP: set it to 'auto' if you have long content pages */
 }
 
 .avgrund-popin {
-	position: absolute;
+	position: fixed;
 	background: #fff;
 	padding: 10px;
 	overflow: hidden;
@@ -25,9 +25,9 @@ html, body {
 
 .avgrund-overlay {
 	background: #000;
-	position: fixed;
+	position: absolute;
 	width: 100%;
-	height: 2000px; /* set long height for prevent -webkit position:fixed in transformed element behavior */
+	height: 20000px;
 	top: 0;
 	left: 0;
 	z-index: 101;
@@ -58,7 +58,8 @@ body.avgrund-active {
 	-ms-transform: scale(0.9);
 	-o-transform: scale(0.9);
 	transform: scale(0.9);
-	/* overflow: hidden; TIP: disables scrolling for long documents */
+	/*overflow: hidden; /* TIP: disables scrolling for long documents */
+	/*position: relative;*/
 }
 
 .avgrund-active .avgrund-popin {
@@ -103,13 +104,8 @@ body.avgrund-active {
 	filter: blur(1px);
 }
 
-.avgrund-close {
-	display: block;
-	text-transform: uppercase;
-	color: #555;
-	text-decoration: none;
-	position: absolute;
-	top: 6px;
-	right: 10px;
-	font-size: 13px;
+.avgrund-wrap-inner {
+	position: relative;
+	overflow: hidden;
+	height: 100%;
 }
